--- a/package.json
+++ b/package.json
@@ -9,6 +9,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.6.1"
+    "@astrojs/react": "^4.2.3",
+    "@astrojs/vercel": "^8.1.3",
+    "@tailwindcss/vite": "^4.1.3",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
+    "astro": "^5.6.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-simple-typewriter": "^5.0.1",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^4.1.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
