--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "dependencies": {
     "@astrojs/react": "^4.2.3",
     "@astrojs/vercel": "^8.1.3",
+    "@fontsource-variable/inter": "^5.2.5",
+    "@npmcli/package-json": "^6.1.1",
     "@tailwindcss/vite": "^4.1.3",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
     "astro": "^5.6.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-simple-typewriter": "^5.0.1",
-    "tailwind": "^4.0.0",
+    "tailwind-hamburgers": "^1.3.5",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
