--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/vercel": "^8.1.3",
     "@fontsource-variable/inter": "^5.2.5",
     "@npmcli/package-json": "^6.1.1",
+    "@tailwindcss/cli": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
