--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@astrojs/react": "^4.2.3",
     "@astrojs/vercel": "^8.1.3",
     "@fontsource-variable/inter": "^5.2.5",
+    "@fontsource-variable/libre-franklin": "^5.2.5",
+    "@fontsource-variable/playfair-display": "^5.2.5",
+    "@fontsource-variable/roboto-mono": "^5.2.5",
     "@npmcli/package-json": "^6.1.1",
     "@tailwindcss/cli": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
