--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource-variable/libre-franklin": "^5.2.5",
     "@fontsource-variable/playfair-display": "^5.2.5",
     "@fontsource-variable/roboto-mono": "^5.2.5",
+    "@fontsource/bebas-neue": "^5.2.5",
     "@npmcli/package-json": "^6.1.1",
     "@tailwindcss/cli": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
