Moved assets back to src + Adding sharp (Fixing image loading issues)

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-simple-typewriter": "^5.0.1",
+    "sharp": "^0.34.5",
     "tailwind-hamburgers": "^1.3.5",
     "tailwindcss": "^4.1.3"
   },
